# freebie-hunter

./: .gitignore  LICENSE  README.md  pyproject.toml
freebie_hunter/: __init__.py  config.py  database.py  digest.py  email_gen.py  filter.py  main.py  scraper.py  search_discovery.py  signup.py
